--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img id="myVideo" src="https://i.pinimg.com/originals/26/fd/49/26fd49fa54b204fbaf6301efefd53ae2.gif">
         <div class="text-center img-content">
             <img style="
-        width: 200px;
+        width: 100px;
         border-radius: 100%;
         -webkit-animation-name: hvr-bob-float, hvr-bob;
         animation-name: hvr-bob-float, hvr-bob;
@@ -93,7 +93,7 @@
         -webkit-animation-fill-mode: forwards;
         animation-fill-mode: forwards;
         -webkit-animation-direction: normal, alternate;
-        animation-direction: normal, alternate;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTG1Hstts0eg8bZcNmcPec5Ot1Nu6K8SPDJf3rWIQUzuhi0yXeAThCCNc6A&s=10" alt="MY BIO">
+        animation-direction: normal, alternate;" src="https://i.ibb.co/zmTSDqD/IMG-20241020-003214.jpg" alt="MY BIO">
             <div>
                 <h1 class="ml13">
                     <span class="letter" style="opacity: 1; transform: translateY(0px) translateZ(0px);">phumitch</span>
