--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -77,7 +76,6 @@
         }
     </style>
 </head>
-
 <body id="body" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
     <div class="content" style="text-align: center; max-width: 100%; margin: 0 auto;">
         <img id="myVideo" src="https://i.pinimg.com/originals/26/fd/49/26fd49fa54b204fbaf6301efefd53ae2.gif" style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
@@ -107,6 +105,7 @@
 
     <div class="join-discord">
         <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="btn btn-custom">Join My Discord</a>
+        <a href="show.html" class="btn btn-custom">ชมผลงานของฉัน</a> <!-- ปุ่มใหม่ -->
     </div>
 
     <div class="content-social">
