--- a/show.html
+++ b/show.html
@@ -107,6 +107,7 @@
 
     <div class="join-discord">
         <a href="https://photos.app.goo.gl/MC6FRr4652S9E9pe9" class="btn btn-custom">กดเพื่อดูผลงานต่างๆ</a>
+        <a href="index.html" class="btn btn-custom">กดเพื่อกลับไปยังหน้าเริ่มต้น</a> <!-- ปุ่มใหม่ -->   
     </div>
 
     <div class="content-social">
