--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 width: 200px;
                 border-radius: 100%;
                 animation: hvr-bob-float 1.5s infinite alternate;
-                " src="https://scontent.futp2-1.fna.fbcdn.net/v/t39.30808-6/345917334_1906381453073693_3166492776839308255_n.jpg" alt="My BIO">
+                " src="" alt="MY BIO">
             <div>
                 <h1 class="ml13">
                     <span class="letter">phumitch</span>
