--- a/index.html
+++ b/index.html
@@ -14,35 +14,49 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>phumitch</title>
     <style>
         body {
             margin: 0;
             font-family: "Kanit", sans-serif;
-            background-color: black;
+            background: linear-gradient(135deg, #232526 0%, #414345 100%);
+            min-height: 100vh;
+            color: #f5f5f5;
         }
 
         #myVideo {
             position: fixed;
             min-width: 100%;
             min-height: 100%;
-            filter: blur(5px);
+            filter: blur(5px) brightness(0.7);
+            z-index: 0;
         }
 
         .img-content {
             color: #fff;
             position: absolute;
-            top: 50%;
+            top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
+            background: rgba(30, 30, 30, 0.45);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(8px) saturate(120%);
+            -webkit-backdrop-filter: blur(8px) saturate(120%);
+            border-radius: 24px;
+            padding: 32px 24px 24px 24px;
+            border: 1px solid rgba(255,255,255,0.18);
+            z-index: 1;
+            transition: box-shadow 0.3s;
         }
 
         .ml13 {
-            font-size: 2em;
+            font-size: 2.2em;
             text-transform: uppercase;
-            letter-spacing: 0.1em;
-            font-weight: 600;
-            color: rgb(255, 255, 255);
+            letter-spacing: 0.12em;
+            font-weight: 700;
+            color: #fff;
+            text-shadow: 0 2px 8px rgba(0,0,0,0.25);
         }
 
         .content-social {
@@ -51,55 +65,124 @@
             color: #f1f1f1;
             width: 100%;
             padding: 20px;
+            background: rgba(30, 30, 30, 0.45);
+            box-shadow: 0 4px 24px 0 rgba(31, 38, 135, 0.17);
+            backdrop-filter: blur(6px);
+            -webkit-backdrop-filter: blur(6px);
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
+            z-index: 2;
         }
 
         .btn-custom {
-            background-color: #7289da80; /* Discord color */
-            color: white;
-            font-size: 1rem;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+            background: linear-gradient(90deg, #7289da 0%, #99aab5 100%);
+            color: #fff;
+            font-size: 1.05rem;
+            padding: 10px 18px;
+            border-radius: 8px;
+            border: none;
+            box-shadow: 0 2px 8px rgba(114,137,218,0.15);
+            transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
             margin-top: 20px;
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            width: 100%;
+            max-width: 160px;
+            min-width: 90px;
+            margin: 10px 0;
+            text-align: center;
         }
 
         .btn-custom:hover {
-            background-color: #75b1ffcc; /* Darker shade for hover */
+            background: linear-gradient(90deg, #99aab5 0%, #7289da 100%);
+            box-shadow: 0 4px 16px rgba(114,137,218,0.25);
+            transform: translateY(-2px) scale(1.04);
         }
 
         .join-discord {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column; /* Default to vertical stacking */
-    align-items: center; /* Center buttons */
-    z-index: 1; /* Ensure it's above other content */
-}
+            position: absolute;
+            top: 70%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            z-index: 1;
+        }
 
-.btn-custom {
-    width: 100%; /* Make buttons full width in vertical layout */
-    max-width: 200px; /* Optional: set a max width */
-    margin: 10px 0; /* Add vertical margin between buttons */
-    text-align: center; /* Center text inside buttons */
-}
+        @media (min-width: 768px) {
+            .join-discord {
+                flex-direction: row;
+                justify-content: center;
+            }
+            .btn-custom {
+                width: 100%;
+                max-width: 160px;
+                min-width: 90px;
+                margin: 0 10px;
+            }
+        }
 
-/* Media query for desktop */
-@media (min-width: 768px) {
-    .join-discord {
-        flex-direction: row; /* Change to horizontal layout on larger screens */
-        justify-content: center; /* Center buttons horizontally */
-    }
+        @media (max-width: 600px) {
+            .img-content {
+                padding: 16px 8px 12px 8px;
+                border-radius: 14px;
+                top: 32%;
+                width: 90vw;
+                min-width: unset;
+                max-width: 98vw;
+            }
+            .ml13 {
+                font-size: 1.2em;
+            }
+            .btn-custom {
+                font-size: 0.95em;
+                padding: 8px 8px;
+                border-radius: 6px;
+                max-width: 180px;
+                min-width: 80px;
+                width: 80%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 10px;
+            }
+            .join-discord {
+                top: 68%;
+                flex-direction: column;
+                width: 100vw;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+            .content-social {
+                padding: 10px 2px;
+                font-size: 0.9em;
+                border-radius: 0;
+            }
+            .content-social i {
+                font-size: 1.3rem !important;
+            }
+            #myVideo {
+                min-width: 100vw;
+                min-height: 100vh;
+            }
+        }
 
-    .btn-custom {
-        width: auto; /* Reset width for horizontal layout */
-        margin: 0 10px; /* Add horizontal margin between buttons */
-    }
-}
+        /* Social icon hover */
+        .hvr-buzz:hover {
+            filter: drop-shadow(0 0 8px #7289da) brightness(1.2);
+            transform: scale(1.15);
+            transition: filter 0.2s, transform 0.2s;
+        }
 
-
-
+        /* Glassmorphism for other containers if needed */
+        .glass {
+            background: rgba(255,255,255,0.08);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.17);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+            border-radius: 16px;
+            border: 1px solid rgba(255,255,255,0.18);
+        }
     </style>
 </head>
 <body id="body" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
@@ -107,10 +190,13 @@
         <img id="myVideo" src="https://i.pinimg.com/originals/26/fd/49/26fd49fa54b204fbaf6301efefd53ae2.gif" style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
         <div class="text-center img-content" style="padding: 10px;">
             <img style="
-                width: 200px;
-                border-radius: 100%;
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                object-fit: cover;
+                object-position: center;
                 animation: hvr-bob-float 1.5s infinite alternate;
-                " src="" alt="MY BIO">
+                " src="/Guitar.jpg" alt="MY BIO">
             <div>
                 <h1 class="ml13">
                     <span class="letter">phumitch</span>
@@ -136,11 +222,11 @@
 
     <div class="content-social">
         <div>
-            <a href="https://github.com/phumitch" target="_blank" class="btn hvr-buzz"><i class="bi bi-github" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://www.facebook.com/phumitchsomsri" target="_blank" class="btn hvr-buzz"><i class="bi bi-facebook" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="btn hvr-buzz"><i class="bi bi-discord" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://www.youtube.com/@phxmitch_" target="_blank" class="btn hvr-buzz"><i class="bi bi-youtube" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://www.instagram.com/p_phumitch" target="_blank" class="btn hvr-buzz"><i class="bi bi-instagram" style="color:white;font-size:2rem;"></i></a>
+            <a href="https://github.com/phumitch" target="_blank" class="btn hvr-buzz"><i class="fab fa-github" style="color:white;font-size:2rem;"></i></a>
+            <a href="https://www.facebook.com/phumitchsomsri" target="_blank" class="btn hvr-buzz"><i class="fab fa-facebook" style="color:white;font-size:2rem;"></i></a>
+            <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="btn hvr-buzz"><i class="fab fa-discord" style="color:white;font-size:2rem;"></i></a>
+            <a href="https://www.youtube.com/@phxmitch_" target="_blank" class="btn hvr-buzz"><i class="fab fa-youtube" style="color:white;font-size:2rem;"></i></a>
+            <a href="https://www.instagram.com/p_phumitch" target="_blank" class="btn hvr-buzz"><i class="fab fa-instagram" style="color:white;font-size:2rem;"></i></a>
         </div>
     </div>
 
