--- a/index.html
+++ b/index.html
@@ -75,28 +75,40 @@
         }
 
         .btn-custom {
-            background: linear-gradient(90deg, #7289da 0%, #99aab5 100%);
+            background: rgba(255,255,255,0.15);
             color: #fff;
-            font-size: 1.05rem;
-            padding: 10px 18px;
-            border-radius: 8px;
-            border: none;
-            box-shadow: 0 2px 8px rgba(114,137,218,0.15);
+            font-size: 1.1rem;
+            padding: 12px 28px;
+            border-radius: 16px;
+            border: 1.5px solid rgba(255,255,255,0.25);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
+            backdrop-filter: blur(8px) saturate(180%);
+            -webkit-backdrop-filter: blur(8px) saturate(180%);
             transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
-            margin-top: 20px;
             font-weight: 600;
-            letter-spacing: 0.05em;
+            letter-spacing: 0.07em;
             width: 100%;
-            max-width: 160px;
-            min-width: 90px;
-            margin: 10px 0;
+            max-width: 180px;
+            min-width: 100px;
+            margin: 12px 0;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
-
+        .btn-custom::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: linear-gradient(120deg, rgba(255,255,255,0.35) 0%, rgba(255,255,255,0.05) 100%);
+            opacity: 0.7;
+            pointer-events: none;
+            border-radius: inherit;
+        }
         .btn-custom:hover {
-            background: linear-gradient(90deg, #99aab5 0%, #7289da 100%);
-            box-shadow: 0 4px 16px rgba(114,137,218,0.25);
-            transform: translateY(-2px) scale(1.04);
+            background: rgba(255,255,255,0.25);
+            box-shadow: 0 12px 32px 0 rgba(114,137,218,0.25), 0 1.5px 8px 0 rgba(255,255,255,0.15) inset;
+            transform: translateY(-2px) scale(1.05);
+            color: #232526;
         }
 
         .join-discord {
@@ -117,8 +129,8 @@
             }
             .btn-custom {
                 width: 100%;
-                max-width: 160px;
-                min-width: 90px;
+                max-width: 200px;
+                min-width: 200px;
                 margin: 0 10px;
             }
         }
