--- a/show.html
+++ b/show.html
@@ -76,28 +76,40 @@
         }
 
         .btn-custom {
-            background: linear-gradient(90deg, #7289da 0%, #99aab5 100%);
+            background: rgba(255,255,255,0.15);
             color: #fff;
             font-size: 1.1rem;
             padding: 12px 28px;
-            border-radius: 8px;
-            border: none;
-            box-shadow: 0 2px 8px rgba(114,137,218,0.15);
+            border-radius: 16px;
+            border: 1.5px solid rgba(255,255,255,0.25);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
+            backdrop-filter: blur(8px) saturate(180%);
+            -webkit-backdrop-filter: blur(8px) saturate(180%);
             transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
-            margin-top: 20px;
             font-weight: 600;
-            letter-spacing: 0.05em;
-            width: auto;
-            max-width: 220px;
-            min-width: 120px;
-            margin: 10px 0;
+            letter-spacing: 0.07em;
+            width: 100%;
+            max-width: 180px;
+            min-width: 100px;
+            margin: 12px 0;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
-
+        .btn-custom::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: linear-gradient(120deg, rgba(255,255,255,0.35) 0%, rgba(255,255,255,0.05) 100%);
+            opacity: 0.7;
+            pointer-events: none;
+            border-radius: inherit;
+        }
         .btn-custom:hover {
-            background: linear-gradient(90deg, #99aab5 0%, #7289da 100%);
-            box-shadow: 0 4px 16px rgba(114,137,218,0.25);
-            transform: translateY(-2px) scale(1.04);
+            background: rgba(255,255,255,0.25);
+            box-shadow: 0 12px 32px 0 rgba(114,137,218,0.25), 0 1.5px 8px 0 rgba(255,255,255,0.15) inset;
+            transform: translateY(-2px) scale(1.05);
+            color: #232526;
         }
 
         .join-discord {
@@ -119,7 +131,7 @@
             .btn-custom {
                 width: auto;
                 margin: 0 12px;
-                max-width: 220px;
+                max-width: 280px;
             }
         }
 
@@ -140,7 +152,7 @@
                 padding: 10px 10px;
                 border-radius: 6px;
                 max-width: 300px;
-                min-width: 120px;
+                min-width: 300px;
                 width: 90%;
                 margin-left: auto;
                 margin-right: auto;
@@ -191,10 +203,13 @@
         <img id="myVideo" src="https://i.pinimg.com/originals/b7/8d/94/b78d94b0562e52e4b0c6331c208d3cf3.gif" style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
         <div class="text-center img-content" style="padding: 10px;">
             <img style="
-                width: 200px;
-                border-radius: 100%;
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                object-fit: cover;
+                object-position: center;
                 animation: hvr-bob-float 1.5s infinite alternate;
-                " src="/" alt="เว็บผลงาน">
+                " src="/Guitar.jpg" alt="เว็บผลงาน">
             <div>
                 <h1 class="ml13">
                     <span class="letter">phumitch</span>
