--- a/show.html
+++ b/show.html
@@ -200,9 +200,65 @@
             border-radius: 16px;
             border: 1px solid rgba(255,255,255,0.18);
         }
+        #preloader {
+    position: fixed;
+    z-index: 9999;
+    inset: 0;
+    background: rgba(30,30,30,0.55);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.5s;
+}
+.liquid-glass {
+    width: 120px;
+    height: 120px;
+    border-radius: 32px;
+    background: rgba(255,255,255,0.18);
+    box-shadow: 0 8px 32px 0 rgba(31,38,135,0.25);
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    border: 2px solid rgba(255,255,255,0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+.liquid-glass::before {
+    content: "";
+    position: absolute;
+    width: 180%;
+    height: 180%;
+    top: -40%;
+    left: -40%;
+    background: linear-gradient(120deg, #7289da55 30%, #fff2 70%, #23252644 100%);
+    border-radius: 50%;
+    animation: liquidMove 2.5s infinite linear;
+    opacity: 0.7;
+}
+@keyframes liquidMove {
+    0% { transform: rotate(0deg) scale(1); }
+    100% { transform: rotate(360deg) scale(1.05);}
+}
+.loader-text {
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    font-size: 1.1em;
+    font-weight: 600;
+    letter-spacing: 0.08em;
+    text-shadow: 0 2px 8px #23252644;
+    font-family: "Kanit", sans-serif;
+}
     </style>
 </head>
-
+<body id="body" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+    <div id="preloader">
+        <div class="liquid-glass">
+            <span class="loader-text">กำลังโหลด...</span>
+        </div>
+    </div>
 <body id="body" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
     <div class="content">
         <img id="myVideo" src="https://i.pinimg.com/originals/b7/8d/94/b78d94b0562e52e4b0c6331c208d3cf3.gif" style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
@@ -306,6 +362,25 @@
             css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
             document.body.appendChild(css);
         };
+        window.addEventListener('load', function() {
+    if (!localStorage.getItem('visited')) {
+        setTimeout(function() {
+            var preloader = document.getElementById('preloader');
+            if (preloader) {
+                preloader.style.opacity = '0';
+                setTimeout(function() {
+                    preloader.style.display = 'none';
+                }, 500);
+            }
+            localStorage.setItem('visited', 'yes');
+        }, 800);
+    } else {
+        var preloader = document.getElementById('preloader');
+        if (preloader) {
+            preloader.style.display = 'none';
+        }
+    }
+});
     </script>
 
     <style type="text/css">
